Added excel report

--- a/MoneyAccumulationSystem.WebApi/appsettings.json
+++ b/MoneyAccumulationSystem.WebApi/appsettings.json
@@ -7,6 +7,11 @@
     "Audience": "mas.com",
     "SecretKey": "e4495bb1fc624612a8c758026dfd2d75"
   },
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "NonCommercial"
+    }
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
