--- a/MoneyAccumulationSystem.Services/MoneyAccumulationSystem.Services.csproj
+++ b/MoneyAccumulationSystem.Services/MoneyAccumulationSystem.Services.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="12.0.1" />
+        <PackageReference Include="EPPlus" Version="6.1.3" />
         <PackageReference Include="FluentValidation" Version="11.5.1" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
         <PackageReference Include="MediatR" Version="12.0.1" />
@@ -16,6 +17,10 @@
       <ProjectReference Include="..\MoneyAccumulationSystem.CrossCutting\MoneyAccumulationSystem.CrossCutting.csproj" />
       <ProjectReference Include="..\MoneyAccumulationSystem.Database.EF\MoneyAccumulationSystem.Database.EF.csproj" />
       <ProjectReference Include="..\MoneyAccumulationSystem.Repositories\MoneyAccumulationSystem.Repositories.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Reports\Excel\Templates" />
     </ItemGroup>
 
 </Project>
